add ticket filtering capabilities via query parameters